kdoc/0.1.16/kinta-lib/kinta-lib/com.dailymotion.kinta/-kinta-env/-var/index.md
//[kinta-lib](../../../../index.md)/[com.dailymotion.kinta](../../index.md)/[KintaEnv](../index.md)/[Var](index.md)



# Var  
 [jvm] enum [Var](index.md) : [Enum](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-enum/index.html)<[KintaEnv.Var](index.md)>    


## Entries  
  
| | |
|---|---|
| <a name="com.dailymotion.kinta/KintaEnv.Var.APPGALLERY_TOKEN///PointingToDeclaration/"></a>[APPGALLERY_TOKEN](-a-p-p-g-a-l-l-e-r-y_-t-o-k-e-n/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.APPGALLERY_TOKEN///PointingToDeclaration/"></a> [jvm] [APPGALLERY_TOKEN](-a-p-p-g-a-l-l-e-r-y_-t-o-k-e-n/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.APPGALLERY_PACKAGE_NAME///PointingToDeclaration/"></a>[APPGALLERY_PACKAGE_NAME](-a-p-p-g-a-l-l-e-r-y_-p-a-c-k-a-g-e_-n-a-m-e/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.APPGALLERY_PACKAGE_NAME///PointingToDeclaration/"></a> [jvm] [APPGALLERY_PACKAGE_NAME](-a-p-p-g-a-l-l-e-r-y_-p-a-c-k-a-g-e_-n-a-m-e/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.APPGALLERY_CLIENT_SECRET///PointingToDeclaration/"></a>[APPGALLERY_CLIENT_SECRET](-a-p-p-g-a-l-l-e-r-y_-c-l-i-e-n-t_-s-e-c-r-e-t/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.APPGALLERY_CLIENT_SECRET///PointingToDeclaration/"></a> [jvm] [APPGALLERY_CLIENT_SECRET](-a-p-p-g-a-l-l-e-r-y_-c-l-i-e-n-t_-s-e-c-r-e-t/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.APPGALLERY_CLIENT_ID///PointingToDeclaration/"></a>[APPGALLERY_CLIENT_ID](-a-p-p-g-a-l-l-e-r-y_-c-l-i-e-n-t_-i-d/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.APPGALLERY_CLIENT_ID///PointingToDeclaration/"></a> [jvm] [APPGALLERY_CLIENT_ID](-a-p-p-g-a-l-l-e-r-y_-c-l-i-e-n-t_-i-d/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.REPOSITORY_NAME///PointingToDeclaration/"></a>[REPOSITORY_NAME](-r-e-p-o-s-i-t-o-r-y_-n-a-m-e/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.REPOSITORY_NAME///PointingToDeclaration/"></a> [jvm] [REPOSITORY_NAME](-r-e-p-o-s-i-t-o-r-y_-n-a-m-e/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.KINTA_KEY_PASSWORD///PointingToDeclaration/"></a>[KINTA_KEY_PASSWORD](-k-i-n-t-a_-k-e-y_-p-a-s-s-w-o-r-d/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.KINTA_KEY_PASSWORD///PointingToDeclaration/"></a> [jvm] [KINTA_KEY_PASSWORD](-k-i-n-t-a_-k-e-y_-p-a-s-s-w-o-r-d/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.KINTA_KEY_ALIAS///PointingToDeclaration/"></a>[KINTA_KEY_ALIAS](-k-i-n-t-a_-k-e-y_-a-l-i-a-s/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.KINTA_KEY_ALIAS///PointingToDeclaration/"></a> [jvm] [KINTA_KEY_ALIAS](-k-i-n-t-a_-k-e-y_-a-l-i-a-s/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.KINTA_KEYSTORE_PASSWORD///PointingToDeclaration/"></a>[KINTA_KEYSTORE_PASSWORD](-k-i-n-t-a_-k-e-y-s-t-o-r-e_-p-a-s-s-w-o-r-d/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.KINTA_KEYSTORE_PASSWORD///PointingToDeclaration/"></a> [jvm] [KINTA_KEYSTORE_PASSWORD](-k-i-n-t-a_-k-e-y-s-t-o-r-e_-p-a-s-s-w-o-r-d/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.KINTA_KEYSTORE///PointingToDeclaration/"></a>[KINTA_KEYSTORE](-k-i-n-t-a_-k-e-y-s-t-o-r-e/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.KINTA_KEYSTORE///PointingToDeclaration/"></a> [jvm] [KINTA_KEYSTORE](-k-i-n-t-a_-k-e-y-s-t-o-r-e/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.APPLE_USERNAME///PointingToDeclaration/"></a>[APPLE_USERNAME](-a-p-p-l-e_-u-s-e-r-n-a-m-e/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.APPLE_USERNAME///PointingToDeclaration/"></a> [jvm] [APPLE_USERNAME](-a-p-p-l-e_-u-s-e-r-n-a-m-e/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.APPLE_PASSWORD///PointingToDeclaration/"></a>[APPLE_PASSWORD](-a-p-p-l-e_-p-a-s-s-w-o-r-d/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.APPLE_PASSWORD///PointingToDeclaration/"></a> [jvm] [APPLE_PASSWORD](-a-p-p-l-e_-p-a-s-s-w-o-r-d/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.JIRA_URL///PointingToDeclaration/"></a>[JIRA_URL](-j-i-r-a_-u-r-l/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.JIRA_URL///PointingToDeclaration/"></a> [jvm] [JIRA_URL](-j-i-r-a_-u-r-l/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.BITRISE_PERSONAL_TOKEN///PointingToDeclaration/"></a>[BITRISE_PERSONAL_TOKEN](-b-i-t-r-i-s-e_-p-e-r-s-o-n-a-l_-t-o-k-e-n/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.BITRISE_PERSONAL_TOKEN///PointingToDeclaration/"></a> [jvm] [BITRISE_PERSONAL_TOKEN](-b-i-t-r-i-s-e_-p-e-r-s-o-n-a-l_-t-o-k-e-n/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.JIRA_PASSWORD///PointingToDeclaration/"></a>[JIRA_PASSWORD](-j-i-r-a_-p-a-s-s-w-o-r-d/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.JIRA_PASSWORD///PointingToDeclaration/"></a> [jvm] [JIRA_PASSWORD](-j-i-r-a_-p-a-s-s-w-o-r-d/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.JIRA_USERNAME///PointingToDeclaration/"></a>[JIRA_USERNAME](-j-i-r-a_-u-s-e-r-n-a-m-e/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.JIRA_USERNAME///PointingToDeclaration/"></a> [jvm] [JIRA_USERNAME](-j-i-r-a_-u-s-e-r-n-a-m-e/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.GOOGLE_CLOUD_DATASTORE_JSON///PointingToDeclaration/"></a>[GOOGLE_CLOUD_DATASTORE_JSON](-g-o-o-g-l-e_-c-l-o-u-d_-d-a-t-a-s-t-o-r-e_-j-s-o-n/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.GOOGLE_CLOUD_DATASTORE_JSON///PointingToDeclaration/"></a> [jvm] [GOOGLE_CLOUD_DATASTORE_JSON](-g-o-o-g-l-e_-c-l-o-u-d_-d-a-t-a-s-t-o-r-e_-j-s-o-n/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.GOOGLE_CLOUD_STORAGE_JSON///PointingToDeclaration/"></a>[GOOGLE_CLOUD_STORAGE_JSON](-g-o-o-g-l-e_-c-l-o-u-d_-s-t-o-r-a-g-e_-j-s-o-n/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.GOOGLE_CLOUD_STORAGE_JSON///PointingToDeclaration/"></a> [jvm] [GOOGLE_CLOUD_STORAGE_JSON](-g-o-o-g-l-e_-c-l-o-u-d_-s-t-o-r-a-g-e_-j-s-o-n/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.GOOGLE_PLAY_JSON///PointingToDeclaration/"></a>[GOOGLE_PLAY_JSON](-g-o-o-g-l-e_-p-l-a-y_-j-s-o-n/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.GOOGLE_PLAY_JSON///PointingToDeclaration/"></a> [jvm] [GOOGLE_PLAY_JSON](-g-o-o-g-l-e_-p-l-a-y_-j-s-o-n/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.TRANSIFEX_ORG///PointingToDeclaration/"></a>[TRANSIFEX_ORG](-t-r-a-n-s-i-f-e-x_-o-r-g/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.TRANSIFEX_ORG///PointingToDeclaration/"></a> [jvm] [TRANSIFEX_ORG](-t-r-a-n-s-i-f-e-x_-o-r-g/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.TRANSIFEX_PROJECT///PointingToDeclaration/"></a>[TRANSIFEX_PROJECT](-t-r-a-n-s-i-f-e-x_-p-r-o-j-e-c-t/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.TRANSIFEX_PROJECT///PointingToDeclaration/"></a> [jvm] [TRANSIFEX_PROJECT](-t-r-a-n-s-i-f-e-x_-p-r-o-j-e-c-t/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.TRANSIFEX_TOKEN///PointingToDeclaration/"></a>[TRANSIFEX_TOKEN](-t-r-a-n-s-i-f-e-x_-t-o-k-e-n/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.TRANSIFEX_TOKEN///PointingToDeclaration/"></a> [jvm] [TRANSIFEX_TOKEN](-t-r-a-n-s-i-f-e-x_-t-o-k-e-n/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.GITHUB_APP_CLIENT_SECRET///PointingToDeclaration/"></a>[GITHUB_APP_CLIENT_SECRET](-g-i-t-h-u-b_-a-p-p_-c-l-i-e-n-t_-s-e-c-r-e-t/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.GITHUB_APP_CLIENT_SECRET///PointingToDeclaration/"></a> [jvm] [GITHUB_APP_CLIENT_SECRET](-g-i-t-h-u-b_-a-p-p_-c-l-i-e-n-t_-s-e-c-r-e-t/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.GITHUB_APP_CLIENT_ID///PointingToDeclaration/"></a>[GITHUB_APP_CLIENT_ID](-g-i-t-h-u-b_-a-p-p_-c-l-i-e-n-t_-i-d/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.GITHUB_APP_CLIENT_ID///PointingToDeclaration/"></a> [jvm] [GITHUB_APP_CLIENT_ID](-g-i-t-h-u-b_-a-p-p_-c-l-i-e-n-t_-i-d/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.APPCENTER_TOKEN///PointingToDeclaration/"></a>[APPCENTER_TOKEN](-a-p-p-c-e-n-t-e-r_-t-o-k-e-n/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.APPCENTER_TOKEN///PointingToDeclaration/"></a> [jvm] [APPCENTER_TOKEN](-a-p-p-c-e-n-t-e-r_-t-o-k-e-n/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.GITHUB_USERNAME///PointingToDeclaration/"></a>[GITHUB_USERNAME](-g-i-t-h-u-b_-u-s-e-r-n-a-m-e/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.GITHUB_USERNAME///PointingToDeclaration/"></a> [jvm] [GITHUB_USERNAME](-g-i-t-h-u-b_-u-s-e-r-n-a-m-e/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.GITHUB_TOKEN///PointingToDeclaration/"></a>[GITHUB_TOKEN](-g-i-t-h-u-b_-t-o-k-e-n/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.GITHUB_TOKEN///PointingToDeclaration/"></a> [jvm] [GITHUB_TOKEN](-g-i-t-h-u-b_-t-o-k-e-n/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.GITLAB_PERSONAL_TOKEN///PointingToDeclaration/"></a>[GITLAB_PERSONAL_TOKEN](-g-i-t-l-a-b_-p-e-r-s-o-n-a-l_-t-o-k-e-n/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.GITLAB_PERSONAL_TOKEN///PointingToDeclaration/"></a> [jvm] [GITLAB_PERSONAL_TOKEN](-g-i-t-l-a-b_-p-e-r-s-o-n-a-l_-t-o-k-e-n/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.SLACK_WEBHOOK_URL///PointingToDeclaration/"></a>[SLACK_WEBHOOK_URL](-s-l-a-c-k_-w-e-b-h-o-o-k_-u-r-l/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.SLACK_WEBHOOK_URL///PointingToDeclaration/"></a> [jvm] [SLACK_WEBHOOK_URL](-s-l-a-c-k_-w-e-b-h-o-o-k_-u-r-l/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.APPCENTER_ORGANIZATION///PointingToDeclaration/"></a>[APPCENTER_ORGANIZATION](-a-p-p-c-e-n-t-e-r_-o-r-g-a-n-i-z-a-t-i-o-n/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.APPCENTER_ORGANIZATION///PointingToDeclaration/"></a> [jvm] [APPCENTER_ORGANIZATION](-a-p-p-c-e-n-t-e-r_-o-r-g-a-n-i-z-a-t-i-o-n/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.GOOGLE_CLOUD_STORAGE_BUCKET///PointingToDeclaration/"></a>[GOOGLE_CLOUD_STORAGE_BUCKET](-g-o-o-g-l-e_-c-l-o-u-d_-s-t-o-r-a-g-e_-b-u-c-k-e-t/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.GOOGLE_CLOUD_STORAGE_BUCKET///PointingToDeclaration/"></a> [jvm] [GOOGLE_CLOUD_STORAGE_BUCKET](-g-o-o-g-l-e_-c-l-o-u-d_-s-t-o-r-a-g-e_-b-u-c-k-e-t/index.md)()  <br>   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var.GOOGLE_PLAY_PACKAGE_NAME///PointingToDeclaration/"></a>[GOOGLE_PLAY_PACKAGE_NAME](-g-o-o-g-l-e_-p-l-a-y_-p-a-c-k-a-g-e_-n-a-m-e/index.md)| <a name="com.dailymotion.kinta/KintaEnv.Var.GOOGLE_PLAY_PACKAGE_NAME///PointingToDeclaration/"></a> [jvm] [GOOGLE_PLAY_PACKAGE_NAME](-g-o-o-g-l-e_-p-l-a-y_-p-a-c-k-a-g-e_-n-a-m-e/index.md)()  <br>   <br>|


## Properties  
  
|  Name |  Summary | 
|---|---|
| <a name="com.dailymotion.kinta/KintaEnv.Var/name/#/PointingToDeclaration/"></a>[name](index.md#-2084981494%2FProperties%2F-1554222510)| <a name="com.dailymotion.kinta/KintaEnv.Var/name/#/PointingToDeclaration/"></a> [jvm] val [name](index.md#-2084981494%2FProperties%2F-1554222510): [String](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)   <br>|
| <a name="com.dailymotion.kinta/KintaEnv.Var/ordinal/#/PointingToDeclaration/"></a>[ordinal](index.md#-392323596%2FProperties%2F-1554222510)| <a name="com.dailymotion.kinta/KintaEnv.Var/ordinal/#/PointingToDeclaration/"></a> [jvm] val [ordinal](index.md#-392323596%2FProperties%2F-1554222510): [Int](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html)   <br>|

